<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp">


        <VideoView
            android:id="@+id/video_selected"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/imagen_seleccionada" />



    <TextView
        android:id="@+id/tv_ruta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/video_selected"
        android:text="@string/ruta_message"
        android:textSize="16sp"
        />
    <TextView
        android:id="@+id/rutaImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_message_image"
        android:layout_toEndOf="@id/tv_ruta"
        android:layout_below="@id/video_selected"
        android:layout_marginStart="15dp"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btn_abrir"

        android:layout_height="wrap_content"
        android:text="@string/abrir"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="@style/buttons"

        />

    <Button
        android:id="@+id/btn_camara"
        android:layout_height="wrap_content"
        android:text="@string/capturar"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        style="@style/buttons"


        />




</RelativeLayout>